# home-monitor

./: .gitignore  CMakeLists.txt  Makefile  Makefile.include  README  home-monitor.service  home-monitor.xml.example  vcpkg.json
extra/: home-monitor
lib/: Makefile
lib/crafter/: Makefile
src/: CMakeLists.txt  Configuration.cpp  Configuration.h  Machine.h  Networking.cpp  Networking.h  main.cpp
